--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Cell Counter
 ************
 
-HTML5 Web application for counting cells in microscope images
+HTML5 Web application for counting cells in microscope images.
+
+
+
